# USTC_CG_25_fork

Framework2D/src/assignments/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  minidraw_window.cpp
Framework2D/src/assignments/1_MiniDraw/shapes/: ellipse.cpp  freehand.cpp  freehand.h  polygon.cpp  polygon.h
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp  warping_widget.h  warping_window.cpp
Framework2D/src/assignments/2_ImageWarping/warper/: IDW_warper.cpp  IDW_warper.h  RBF_warper.cpp  RBF_warper.h  nn_warper.cpp  nn_warper.h  warper.h
Framework2D/src/assignments/3_PoissonImageEditing/: poisson_window.cpp  seamless_clone.cpp  seamless_clone.h  target_image_widget.cpp  target_image_widget.h
Framework3D/submissions/assignments/nodes_render/: node_render_shadow_mapping_gl.cpp
Framework3D/submissions/assignments/nodes_render/shaders/: blinn_phong.fs  rasterize_impl.fs
Framework3D/submissions/lmc_homework/nodes/: node_boundary_mapping.cpp  node_hw0.cpp  node_mesh_editing.cpp  node_min_surf.cpp
Homeworks/: README.md
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: CMakeLists.txt  DArray.cpp
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: CMakeLists.txt  DArray.cpp
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: CMakeLists.txt  DArray.h  main.cpp
Homeworks/0_cpp_warmup/project/src/libraries/shared/: PolynomialList.cpp
Homeworks/8_mass_spring/: README.md
(+1 files in other folders)
